JGGH - Fix cors y logueo